Add checkbox to disable test addresses in the autofill popup
This is disabled by default, in this case the the test addresses option
will not be displayed in the Autofill popup.

demo: https://screencast.googleplex.com/cast/NTcwMDk5NDMwOTU1NDE3NnxhMTk5NjA0Ny0wYQ
Bug: 40270486
Change-Id: If32621353a7e378b4c558456de9d7150a8c42d06
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5749083
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Bruno Braga <brunobraga@google.com>

--- a/front_end/panels/autofill/autofillView.css
+++ b/front_end/panels/autofill/autofillView.css
@@ -8,6 +8,12 @@ main {
   height: 100%;
 }
 
+.header {
+  display: flex;
+  border-bottom: 1px solid var(--sys-color-divider);
+  width: 100%;
+}
+
 .placeholder-container {
   height: calc(100% - 29px);
   display: flex;
@@ -46,21 +52,23 @@ main {
 }
 
 .right-to-left {
+  border-bottom: 1px solid var(--sys-color-divider);
   display: flex;
   flex-flow: row-reverse wrap;
   justify-content: flex-end;
 }
 
 .label-container {
-  padding: 5px 5px 0;
+  padding: 5px;
   display: flex;
   align-items: flex-start;
 }
 
-.top-right-corner {
+.top-left-corner {
+  border-bottom: 1px solid var(--sys-color-divider);
   display: flex;
-  justify-content: flex-end;
   padding: 5px;
+  gap: 10px;
 }
 
 .matches-filled-field {
@@ -77,5 +85,5 @@ main {
 }
 
 .feedback {
-  margin: 1.5px 3px 0 5px;
+  margin: auto 5px auto auto;
 }
