[elements] Correctly update rendering for overloaded length properties.
Also generally simplify the DOM structure and the CSS for the component.

Fixed: 357020613
Screenshot: https://imgur.com/whilwvq.png
Change-Id: I17cd28adf335aa8e9fbee7b53c36bf9b1c337b94
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5759681
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/legacy/components/inline_editor/cssLength.css
+++ b/front_end/ui/legacy/components/inline_editor/cssLength.css
@@ -4,34 +4,20 @@
  * found in the LICENSE file.
  */
 
-.css-length {
+:host {
   display: inline-block;
   position: relative;
   outline: none;
 }
 
-.css-length.overloaded {
+:host(:not(:last-child)) {
+  margin-right: 0.1em;
+}
+
+:host-context(.overloaded) {
   text-decoration: line-through;
 }
 
 .value {
   cursor: ew-resize;
-}
-
-.icon {
-  position: absolute;
-  display: inline-block;
-  mask-image: var(--image-file-chevron-down);
-  mask-repeat: no-repeat;
-  background-color: var(--icon-default);
-  transform: scale(0.7);
-  margin-left: -7px;
-  margin-top: -3px;
-  content: "";
-  height: 2em;
-  width: 2em;
-}
-
-:host(:not(:last-child)) {
-  margin-right: 0.1em;
 }
