[RPP] Show Labelled Time Ranges in the Sidebar
Display the selected Range in the Annotations Tab. If the range is not saved, remove it straight away.

Video: http://screencast/cast/NjM0Mzc0NDQ1MzM0NTI4MHwxMjQ5OTE4Zi1lMA

Bug: 356118630
Change-Id: I0d4af250069854a72e9dc1267c877a42b81a1052
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5757540
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -45,7 +45,15 @@
   padding: 4px 8px;
   border-radius: 10px;
   font-weight: bold;
-  background-color: var(--app-color-performance-sidebar-label);
+
+  &.entry-label {
+    background-color: var(--app-color-performance-sidebar-entry-label);
+  }
+
+  &.time-range {
+    background-color: var(--app-color-performance-sidebar-time-range);
+    color: var(--app-color-performance-sidebar-time-range-text);
+  }
 }
 
 .label {
