[RPP Observations] Adhere to greenlines and update style
Before:
https://screenshot.googleplex.com/6MXsxBbwXMAT8Mx

After:
https://screenshot.googleplex.com/3eirANU4yMuFYJ7

- Use headings and landmark regions as the mocks indicate
- Add accessible labels to controls as the mocks indicate
- Move combobox labels inside the outlined region
- Updates `ban_a_tags_in_lit_html` to allow `<aside>` tags
- Minor style updates

Bug: 334926021
Change-Id: I5b269e5c07c1a3c88ee5daebbc68c9c8f6a10949
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5762777
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -4,6 +4,10 @@
  * found in the LICENSE file.
  */
 
+:host {
+  display: block;
+}
+
 :host * {
   box-sizing: border-box;
 }
@@ -16,12 +20,22 @@ devtools-dialog {
   font-size: var(--sys-typescale-headline4-size);
   line-height: var(--sys-typescale-headline4-line-height);
   font-weight: var(--ref-typeface-weight-medium);
+  margin: 0;
 }
 
 .section-title {
   font-size: var(--sys-typescale-headline5-size);
   line-height: var(--sys-typescale-headline5-line-height);
   font-weight: var(--ref-typeface-weight-medium);
+  margin: 0;
+}
+
+.privacy-disclosure {
+  margin: 8px 0;
+}
+
+.url-override {
+  margin: 8px 0;
 }
 
 details > summary {
@@ -38,7 +52,7 @@ details > summary {
 .buttons-section {
   display: flex;
   justify-content: flex-end;
-  margin-top: 16px;
+  margin-top: 14px;
   gap: 8px;
 }
 
@@ -62,5 +76,6 @@ label {
 }
 
 .warning {
+  margin: 2px 8px;
   color: var(--color-error-text);
 }
