[GM3Restyling] Replace crealeElement('button') with component buttons
Bug: 325441197
Change-Id: Iedd3584b39f16ede4236fb9e92a6c7d59cb58d91
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5658232
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/profiler/profilesSidebarTree.css
+++ b/front_end/panels/profiler/profilesSidebarTree.css
@@ -40,7 +40,15 @@ li.wait .icon {
   content: none;
 }
 
+li devtools-button {
+  min-width: var(--sys-size-12);
+  visibility: hidden;
+}
+
 /* Tree outline overrides */
+.heap-snapshot-sidebar-tree-item:not(:hover) devtools-button {
+  visibility: hidden;
+}
 
 .heap-snapshot-sidebar-tree-item.wait .icon {
   mask-image: unset;
@@ -198,11 +206,6 @@ li .subtitle {
 
 li.small .subtitle {
   display: none;
-}
-
-li devtools-button {
-  min-width: var(--sys-size-12);
-  visibility: hidden;
 }
 
 li.selected:hover devtools-button {
