Fix toolbar dropdown button focus
Bug: 346148100
Change-Id: I628d088583f3c2f8dfc9ac4d8d4df52263e09cdd
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5766392
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -85,6 +85,10 @@ devtools-issue-counter.main-toolbar {
   top: 1px;
 }
 
+.toolbar-select-container .toolbar-dropdown-arrow {
+  left: -5px;
+}
+
 .toolbar-button.dark-text .toolbar-dropdown-arrow {
   color: var(--sys-color-on-surface);
 }
