[RPP Observations] Add text block to field data section
This text will be the collection period if field data is enabled. If it
is not enabled then a generic message and link to CrUX docs is shown.

Bug: 313906362
Change-Id: I71c1467a73008b9b4467e92bb54d44005f0ae9f0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5766174
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -36,14 +36,14 @@
 }
 
 .next-steps {
-  flex: 0 0 300px;
+  flex: 0 0 336px;
   box-sizing: border-box;
   border: none;
   border-left: 1px solid var(--sys-color-divider);
 }
 
 /* stylelint-disable-next-line at-rule-no-unknown */
-@container (max-width: 600px) {
+@container (max-width: 650px) {
   .live-metrics-view {
     flex-direction: column;
   }
@@ -296,7 +296,7 @@
 }
 
 .field-setup-buttons {
-  margin-top: 10px;
+  margin-top: 14px;
 }
 
 .no-data {
@@ -305,4 +305,17 @@
 
 .tooltip-content {
   margin: 0 6px;
+}
+
+.field-data-message {
+  margin-bottom: 12px;
+}
+
+.collection-period-range {
+  font-weight: var(--ref-typeface-weight-medium);
+}
+
+x-link { /* stylelint-disable-line selector-type-no-unknown */
+  color: var(--sys-color-primary);
+  text-decoration-line: underline;
 }
