RPP: insight hover icon design system fixes
As a drive-by, also fix the lint rule to allow the sys elevation
variables when declaring box-shadow.

Bug: 348591291
Change-Id: Ib80460fef3ca4fc963e4142c2b88bfa164c8876d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5769260
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -34,10 +34,10 @@
   top: 10px;
   right: 10px;
   border: none;
-  width: 20px;
-  height: 20px;
-  box-shadow: var(--drop-shadow-depth-1);
-  border-radius: 50%;
+  width: var(--sys-size-9);
+  height: var(--sys-size-9);
+  box-shadow: var(--sys-elevation-level1);
+  border-radius: var(--sys-shape-corner-full);
   background: var(--sys-color-cdt-base-container);
   opacity: 0%;
   transition: opacity 0.2s ease;
