[RPP Observations] Add detailed local/field comparison text to the tooltip
https://screenshot.googleplex.com/4s5TLYGNk9rYC3p

Bug: 313906438
Change-Id: Iffc935e1c21d0ef1665ed4e8cdb718fb388d2456
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5767601
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -251,6 +251,7 @@
   justify-items: flex-end;
   align-items: center;
   flex: 1;
+  margin-top: 8px;
 }
 
 .histogram-bar {
@@ -304,7 +305,13 @@
 }
 
 .tooltip-content {
-  margin: 0 6px;
+  margin: 0 12px;
+  min-width: min-content;
+  width: 300px;
+}
+
+.detailed-compare-text {
+  margin-bottom: 8px;
 }
 
 .field-data-message {
