[RPP Observations] Add local and field data descriptions
https://screenshot.googleplex.com/88yqUhWYYecTAcK

Also makes the live metrics title change based on if field data is
enabled.

Bug: 334926021
Change-Id: Ic8346813001e8b4cb606c33e91545239f9cef4fc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5769355
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -326,3 +326,9 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   color: var(--sys-color-primary);
   text-decoration-line: underline;
 }
+
+.data-descriptions {
+  margin-top: 10px;
+  padding-left: 12px;
+  border-left: 1px solid var(--sys-color-divider);
+}
