[RPP Observations] Style updates
- Adds CrUX link to field setup dialog
- Show "-" for field p75 values if data is missing but field is enabled
- Other minor size and spacing updates

Bug: 334926021
Change-Id: I3a7727839091d05a15aecf1006e8e55a5d3fc580
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5770472
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -45,8 +45,18 @@ details > summary {
 }
 
 .content {
-  max-width: 500px;
-  padding: 16px;
+  max-width: 360px;
+  padding: 16px 20px 18px;
+  box-sizing: border-box;
+}
+
+.open-button-section {
+  display: flex;
+  flex-direction: row;
+}
+
+.config-button {
+  margin-left: auto;
 }
 
 .buttons-section {
@@ -78,4 +88,9 @@ label {
 .warning {
   margin: 2px 8px;
   color: var(--color-error-text);
+}
+
+x-link { /* stylelint-disable-line selector-type-no-unknown */
+  color: var(--sys-color-primary);
+  text-decoration-line: underline;
 }
