RPP: show message if no memory events found
This CL updates the memory panel shown at the bottom of RPP; if there
are no CounterEvents (which means we have nothing to show), we now show
a small message. Otherwise it just looks like the panel is broken.

https://screenshot.googleplex.com/5N4LHzAveJeAqTz

Fixed: 344471915
Change-Id: I9e6ed7d84ece30a9d06454fcbd43aa93eb397be2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5771135
Commit-Queue: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -86,6 +86,12 @@
   pointer-events: auto;
 }
 
+.timeline-landing-page.legacy > div > p {
+  flex: none;
+  white-space: pre-line;
+  line-height: 18px;
+}
+
 .popover ul {
   margin: 0;
   padding: 0;
@@ -96,6 +102,17 @@
   overflow: hidden;
   flex: auto;
   position: relative;
+
+  .no-events-found {
+    position: absolute;
+    font: var(--sys-typescale-body4-regular);
+    left: var(--sys-size-5);
+    bottom: var(--sys-size-5);
+
+    p {
+      margin: 0;
+    }
+  }
 }
 
 #memory-counters-graph {
@@ -561,12 +578,6 @@
 
 .timeline.panel .status-pane-container > div {
   pointer-events: auto;
-}
-
-.timeline-landing-page.legacy > div > p {
-  flex: none;
-  white-space: pre-line;
-  line-height: 18px;
 }
 
 .timeline-tree-view .data-grid .name-container div {
