[RPP Observations] Add origin mapping table
Table:
https://screenshot.googleplex.com/94rENkKTqoxgXqa

Error message:
https://screenshot.googleplex.com/4m9Q34vTCCJ98AS

Bug: 353725216
Change-Id: I88aae7712d824d7a98845ae40e813541fcb536a4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5775242
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -55,14 +55,30 @@ details > summary {
   flex-direction: row;
 }
 
+.origin-mapping-grid {
+  border: 1px solid var(--sys-color-divider);
+  margin-top: 8px;
+}
+
+.origin-mapping-button-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 6px;
+}
+
 .config-button {
   margin-left: auto;
+}
+
+.advanced-section-contents {
+  margin: 4px 0 14px;
 }
 
 .buttons-section {
   display: flex;
   justify-content: flex-end;
-  margin-top: 14px;
+  margin-top: 6px;
   gap: 8px;
 }
 
@@ -93,4 +109,10 @@ label {
 x-link { /* stylelint-disable-line selector-type-no-unknown */
   color: var(--sys-color-primary);
   text-decoration-line: underline;
+}
+
+.divider {
+  margin: 10px 0;
+  border: none;
+  border-top: 1px solid var(--sys-color-divider);
 }
