[RPP Observations] Add a11y label to URL override checkbox
Bug: 359253625
Change-Id: Iae8022149723a444157cf5dc57647780d381d102
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5784784
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -36,6 +36,11 @@ devtools-dialog {
 
 .url-override {
   margin: 8px 0;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: max-content;
 }
 
 details > summary {
@@ -92,13 +97,6 @@ input[type="checkbox"] {
 
 input[type="text"][disabled] {
   color: var(--sys-color-state-disabled);
-}
-
-label {
-  display: inline-flex;
-  align-items: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .warning {
