--- a/front_end/panels/timeline/timelineFlameChartView.css
+++ b/front_end/panels/timeline/timelineFlameChartView.css
@@ -61,6 +61,11 @@
   border: 2px solid var(--sys-color-error-bright);
 }
 
+.overlay-type-ENTRIES_LINK {
+  height: 100%;
+  width: 100%;
+}
+
 .overlay-type-TIME_RANGE {
   background: linear-gradient(180deg, rgb(255 125 210 / 0%) 0%, rgb(255 125 210 / 15%) 85%); /* stylelint-disable-line plugin/use_theme_colors */
   border-color: var(--ref-palette-pink80);
