RPP: allow users to go back to the observations page
This CL introduces a new dropdown item in RPP that will let users go
back and view the observations page without clearing out other traces
they have imported.

Fixed: 356560849
Change-Id: I10b60720cff40d6756c80b1bb4da24849182ec07
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5782813
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/timelineHistoryManager.css
+++ b/front_end/panels/timeline/timelineHistoryManager.css
@@ -40,8 +40,8 @@
 
 .text-details > span {
   flex: 1 0;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: var(--sys-size-5);
+  padding-right: var(--sys-size-5);
 }
 
 .text-details .name {
@@ -64,4 +64,11 @@
   margin: auto;
   max-width: 100%;
   max-height: 100%;
+}
+
+.landing-page-item {
+  font: var(--sys-typescale-body4-regular);
+  display: flex;
+  align-items: center;
+  gap: var(--sys-size-5);
 }
