[RPP Observations] Improve tooltip tabbing behavior
https://screenshot.googleplex.com/7nCEJxwFXAUS8y2

- Card metric values are now focusable
- Tooltip appears when the metric values are focused
- Tooltip is dismissed on pressing Esc

This was easier to do with a custom tooltip solution rather than using
the existing `Dialog` component. I had to add some custom positioning
code but other than that I think this approach is pretty simple.

Bug: 358691313
Change-Id: I0cad205db656cde78eedb5f4a51e4d225b6402c3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5784776
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -136,6 +136,7 @@
 }
 
 .card-values {
+  position: relative;
   display: flex;
   column-gap: 8px;
   margin-bottom: 8px;
@@ -262,6 +263,7 @@
   align-items: center;
   flex: 1;
   margin-top: 8px;
+  overflow-x: auto;
 }
 
 .histogram-bar {
@@ -314,10 +316,19 @@
   color: var(--sys-color-token-subtle);
 }
 
-.tooltip-content {
-  margin: 0 12px;
-  min-width: min-content;
-  width: 300px;
+.tooltip {
+  display: none;
+  width: min-content;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  box-sizing: border-box;
+  padding: var(--sys-size-5) var(--sys-size-6);
+  border-radius: var(--sys-shape-corner-small);
+  background-color: var(--sys-color-cdt-base-container);
+  box-shadow: var(--drop-shadow-depth-3);
 }
 
 .detailed-compare-text {
