[RPP Observations] Improve field dialog style
Before:
https://screenshot.googleplex.com/88vw89zv5pi5AhD

After:
https://screenshot.googleplex.com/AES7KmiVhzkiFM5

Bug: 334926021, 356356641
Change-Id: I672baa4c94c1352708d586487ad4471e56c59f87
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5784787
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/fieldSettingsDialog.css
+++ b/front_end/panels/timeline/components/fieldSettingsDialog.css
@@ -13,7 +13,7 @@
 }
 
 devtools-dialog {
-  --override-transparent: rgb(0 0 0 / 50%);
+  --override-transparent: color-mix(in sRGB, var(--color-background) 80%, transparent);
 }
 
 .title {
